--- a/style.css
+++ b/style.css
@@ -8,4 +8,12 @@ body {
     min-height: 100vh;
 }
 
-
+.container {
+    background-color: white;
+    border-radius: 10px;
+    min-width: 800px;
+    padding: 20px;
+    box-shadow: 0px 15px 16px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    font-size: 18px;
+}
