--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: medium;
 }
 
 button:hover {
@@ -34,8 +35,10 @@ button:hover {
 
 input[type="number"] {
     width: 100%;
-    padding: 8px;
+    padding: 8px 0; 
     border: 1px solid #ccc;
     border-radius: 5px;
+    padding: 10px;
     margin: 10px 0;
+    font-size: medium;
 }
