--- a/style.css
+++ b/style.css
@@ -34,16 +34,14 @@ button:hover {
 }
 
 input[type="number"] {
-    width: 100%;
-    padding: 8px 0; 
+    padding: 8px 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 10px;
     margin: 10px 0;
     font-size: medium;
 }
 
-#result{
+#result {
     margin-top: 10px;
 }
 
